--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.aurora.mggvertretungsplan"
-    android:versionCode="6"
-  	android:versionName="@string/version"
-    android:installLocation="auto">
+    android:installLocation="auto"
+    android:versionCode="7"
+    android:versionName="@string/version">
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="22" 
-        />
-    
+        android:targetSdkVersion="22" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -18,58 +17,71 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme"
-        android:largeHeap="true" >
-        
-   <activity
+        android:theme="@style/AppBaseTheme">
+
+        <activity
             android:name=".MainActivity"
-            android:label="@string/bar_title" >
+            android:label="@string/bar_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-       <activity android:name=".hilfsMethoden"
-              android:label="@string/app_name">
-		</activity>
-		
-       <activity android:name=".webView_Activity"
-              android:label="@string/action_webview">
-		</activity>
-		
-       	<activity android:name=".PreferenceWithHeaders" 
-       	    android:label="Einstellungen"
+
+        <activity
+            android:name=".hilfsMethoden"
+            android:label="@string/app_name"></activity>
+
+        <activity
+            android:name=".webView_Activity"
+            android:label="@string/action_webview"></activity>
+
+        <activity
+            android:name=".Settings"
+            android:label="Einstellungen"
             android:theme="@style/PreferencesTheme">
-       	 <intent-filter>
-		 	<action android:name="android.intent.action.SETTINGS" />
-         </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SETTINGS" />
+            </intent-filter>
         </activity>
-        
-       	<activity android:name=".PreferenceBenachrichtigungen" 
-       	    android:label="Einstellungen"
+
+        <activity
+            android:name=".PreferenceBenachrichtigungen"
+            android:label="Einstellungen"
             android:theme="@style/PreferencesTheme">
-       	  <intent-filter>
-       	 <action android:name="de.aurora.MggVertretungsplan.EINSTELLUNGEN" />
-       	 <category android:name="android.intent.category.DEFAULT"/>
-       	 </intent-filter>
+            <intent-filter>
+                <action android:name="de.aurora.MggVertretungsplan.EINSTELLUNGEN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
-        
-       
-      <service android:name=".VertretungsplanService"></service>
-      
-      <receiver android:name=".BootUpReceiver">
-  		<intent-filter>
-   			<action android:name="android.intent.action.BOOT_COMPLETED"></action>
- 		</intent-filter>
- 	  </receiver>
-      
-        
-      <activity android:name="com.google.android.gms.ads.AdActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-      
-    <meta-data android:name="com.google.android.gms.version"
-               android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".PreferenceKlasse"
+            android:label="Klasse"
+            android:theme="@style/PreferencesTheme">
+            <intent-filter>
+                <action android:name="de.aurora.MggVertretungsplan.KLASSE" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
+        <service android:name=".VertretungsplanService"></service>
+
+        <receiver android:name=".BootUpReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
+
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
