--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,13 @@
 
         <activity
             android:name=".hilfsMethoden"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name">
+        </activity>
 
         <activity
             android:name=".webView_Activity"
-            android:label="@string/action_webview"></activity>
+            android:label="@string/action_webview">
+        </activity>
 
         <activity
             android:name=".Settings"
@@ -55,22 +57,13 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".PreferenceKlasse"
-            android:label="Klasse"
-            android:theme="@style/PreferencesTheme">
-            <intent-filter>
-                <action android:name="de.aurora.MggVertretungsplan.KLASSE" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-
-        <service android:name=".VertretungsplanService"></service>
+        <service android:name=".VertretungsplanService">
+        </service>
 
         <receiver android:name=".BootUpReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+                <action android:name="android.intent.action.BOOT_COMPLETED">
+                </action>
             </intent-filter>
         </receiver>
 
