--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "de.aurora.mggvertretungsplan"
         minSdkVersion 11
-        targetSdkVersion 21
+        targetSdkVersion 23
     }
 
-    compileOptions.encoding = "ISO-8859-1"
+    compileOptions.encoding = "utf-8"
 
 
     buildTypes {
@@ -22,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.google.android.gms:play-services-ads:7.5.0'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
