Optimized Gitignore removed .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ local.properties
 *.class
 ./app/build/*
 ./build/*
+.idea/*
+.idea/
+.gradle
+./gradle/*
 
 # External tool builders
 .externalToolBuilders/
