--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,51 @@
 ## Eclipse
 #################
 
-*.pydevproject
-.project
-.metadata
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
 bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+.idea/
+.idea/*
+.gradle
+./gradle/*
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
+
+.metadata
 tmp/
 *.tmp
 *.bak
-*.swp
 *~.nib
-local.properties
-.classpath
 .settings/
 .loadpath
-*.class
 ./app/build/*
 ./build/*
-.idea/*
-.idea/
-.gradle
-./gradle/*
 
 # External tool builders
 .externalToolBuilders/
