--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 # Ignore gradle files
 .gradle/
 build/
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -66,6 +70,8 @@ captures/*
 *.ipr
 *~
 *.swp
+
+import-summary.txt
 
 .metadata
 tmp/
