--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: android
+jdk: oraclejdk8
 android:
   components:
     - build-tools-23.0.3
     - android-23
-    - jdk: oraclejdk8
 
 notifications:
   email: false
