--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ android:
   components:
     - build-tools-23.0.3
     - android-23
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 notifications:
   email: false
