--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
     - 'intel-android-extra-license-.+'
+	- 'android-sdk-license-c81a61d9'
 
 notifications:
   email: false
