--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: android
 jdk: oraclejdk8
-branches:
-  only:
-    - master
 android:
   components:
-    - tools
+    - tools-23.0.3
     - build-tools-23.0.3
     - android-23
   licenses:
