--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk8
 sudo: required
 android:
   components:
-    - tools-23.0.3
+    - tools
     - build-tools-23.0.3
     - android-23
   licenses:
@@ -15,6 +15,12 @@ android:
 notifications:
   email: false
 
+env:
+  global:
+    - ANDROID_HOME=${TRAVIS_BUILD_DIR}/android-sdk
+    - PATH=${ANDROID_HOME}/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}
+ 
+  
 before_install:
 
   # for gradle output style
@@ -22,8 +28,8 @@ before_install:
   - export TERM=dumb
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
   - android update sdk --no-ui --filter build-tools-23.0.2,android-23
-  - sudo ls -ltr /usr/local/android-sdk/licenses
-  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > "/usr/local/android-sdk/licenses/android-sdk-license"
+  - cp -R /usr/local/android-sdk-23.0.2 ./android-sdk
+  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > "./android-sdk/licenses/android-sdk-license"
 
 # Let's try to build...
 script: TERM=dumb ./gradlew build
