--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ jdk: oraclejdk8
 sudo: required
 android:
   components:
-    - tools
     - build-tools-23.0.3
     - android-23
   licenses:
@@ -11,6 +10,7 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
     - 'intel-android-extra-license-.+'
+	- '.*'
 
 notifications:
   email: false
@@ -29,7 +29,7 @@ before_install:
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
   - android update sdk --no-ui --filter build-tools-23.0.2,android-23
   - cp -R /usr/local/android-sdk-23.0.2 ./android-sdk
-  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > "./android-sdk/licenses/android-sdk-license"
+  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > ./android-sdk/licenses/android-sdk-license
 
 # Let's try to build...
 script: TERM=dumb ./gradlew build
