--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 jdk: oraclejdk8
-sudo: false
+sudo: require
 android:
   components:
     - tools
@@ -27,9 +27,10 @@ env:
 before_install:
 
   # for gradle output style
-  - chmod +x gradlew
-  - export TERM=dumb
+#  - chmod +x gradlew
+#  - export TERM=dumb
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+  - sudo ls -ltr /usr/local/android-sdk
   - android update sdk --no-ui --filter build-tools-23.0.2,android-23
 
 # Let's try to build...
