Maybe this is it?

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,9 @@ before_install:
 #  - chmod +x gradlew
 #  - export TERM=dumb
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-  - sudo ls -ltr /usr/local/android-sdk
   - android update sdk --no-ui --filter build-tools-23.0.2,android-23
+  - sudo ls -ltr /usr/local/android-sdk
+  - sudo cp -R /usr/local/android-sdk-24.0.2 ${ANDROID_HOME}
 
 # Let's try to build...
 script: TERM=dumb ./gradlew build
