--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ before_install:
   - android update sdk --no-ui --filter build-tools-23.0.2,android-23
   - sudo ls -ltr /usr/local/android-sdk
   - sudo cp -R /usr/local/android-sdk-24.0.2 ${ANDROID_HOME}
+  - sudo ls -ltr ${ANDROID_HOME}
+  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > ${ANDROID_HOME}/licenses/android-sdk-license
 
 # Let's try to build...
 script: TERM=dumb ./gradlew build
