--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,18 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.0'
     useLibrary 'org.apache.http.legacy'
-    
+
     lintOptions {
-          abortOnError false
+        abortOnError false
     }
-      
+
     defaultConfig {
         applicationId "de.aurora.mggvertretungsplan"
         minSdkVersion 11
         targetSdkVersion 25
+        versionCode 15
+        versionName "2.0.3"
+        multiDexEnabled true
     }
 
     compileOptions.encoding = "utf-8"
@@ -31,11 +34,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.github.paolorotolo:appintro:4.1.0'
 }
