--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'com.android.support:customtabs:25.3.1'
 }
