--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.thebluealliance:spectrum:0.7.1'
 }
