--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:allowBackup="true"
         android:icon="@drawable/app_logo_material"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Light">
 
         <activity
             android:name=".MainActivity"
             android:label="@string/bar_title"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppTheme.Light.NoActionBar"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,7 @@
         <activity
             android:name=".Settings"
             android:label="Einstellungen"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SETTINGS" />
             </intent-filter>
@@ -39,7 +39,7 @@
         <activity
             android:name=".PreferenceBenachrichtigungen"
             android:label="Einstellungen"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.Light.NoActionBar">
             <intent-filter>
                 <action android:name="de.aurora.MggVertretungsplan.EINSTELLUNGEN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -49,7 +49,7 @@
         <activity
             android:name="de.aurora.mggvertretungsplan.ui.intro.IntroActivity"
             android:label="Test"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.Light.NoActionBar" />
 
         <service android:name=".VertretungsplanService">
         </service>
