--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:preference-v7:25.3.1'
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.android.support:customtabs:25.3.1'
