--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,6 @@
             android:name=".Settings"
             android:label="Einstellungen"
             android:theme="@style/AppTheme.Light.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.SETTINGS" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -41,14 +38,13 @@
             android:label="Einstellungen"
             android:theme="@style/AppTheme.Light.NoActionBar">
             <intent-filter>
-                <action android:name="de.aurora.MggVertretungsplan.EINSTELLUNGEN" />
+                <action android:name=".EINSTELLUNGEN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
             android:name="de.aurora.mggvertretungsplan.ui.intro.IntroActivity"
-            android:label="Test"
             android:theme="@style/AppTheme.Light.NoActionBar" />
 
         <service android:name=".VertretungsplanService">
