--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="true"
         android:icon="@drawable/app_logo_material"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.Light">
+        android:theme="@style/AppTheme.Light"
+        android:supportsRtl="false">
 
         <activity
             android:name=".MainActivity"
