--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="de.aurora.mggvertretungsplan"
-    android:installLocation="auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <uses-sdk tools:overrideLibrary="android.support.customtabs"/>
+    <uses-sdk tools:overrideLibrary="android.support.customtabs" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_logo_material"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.Light"
-        android:supportsRtl="false">
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme.Light">
 
         <activity
             android:name=".MainActivity"
             android:label="@string/bar_title"
-            android:theme="@style/AppTheme.Light.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -31,8 +31,7 @@
         <activity
             android:name=".Settings"
             android:label="Einstellungen"
-            android:theme="@style/AppTheme.Light.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.Light.NoActionBar"></activity>
 
         <activity
             android:name=".PreferenceBenachrichtigungen"
@@ -48,13 +47,11 @@
             android:name="de.aurora.mggvertretungsplan.ui.intro.IntroActivity"
             android:theme="@style/AppTheme.Light.NoActionBar" />
 
-        <service android:name=".VertretungsplanService">
-        </service>
+        <service android:name=".VertretungsplanService"></service>
 
         <receiver android:name=".BootUpReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED">
-                </action>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
 
