--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <activity
-            android:name=".Settings"
+            android:name=".SettingsActivity"
             android:label="Einstellungen"
             android:theme="@style/AppTheme.Light.NoActionBar" />
 
