TASK: Rename BackgroundService
That shit's name was waaay to long...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:name="de.aurora.mggvertretungsplan.ui.intro.IntroActivity"
             android:theme="@style/AppTheme.Light.NoActionBar" />
 
-        <service android:name=".BackgroundNotificationService" />
+        <service android:name=".BackgroundService" />
 
         <receiver android:name=".BootUpReceiver">
             <intent-filter>
