--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: android
 jdk: oraclejdk8
 sudo: required
+
+env:
+  global:
+    - ANDROID_API=26
+    - EMULATOR_API=26
+    - ANDROID_BUILD_TOOLS=26.0.2
+    #- ANDROID_HOME=${TRAVIS_BUILD_DIR}/android-sdk
+    #- PATH=${ANDROID_HOME}/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}
+ 
 android:
   components:
     - tools
-    - tools
     - platform-tools
-    - build-tools-25.0.0
-    - android-23
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -18,27 +26,31 @@ android:
 notifications:
   email: false
 
-env:
-  global:
-    - ANDROID_HOME=${TRAVIS_BUILD_DIR}/android-sdk
-    - PATH=${ANDROID_HOME}/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}
- 
-  
-before_install:
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 
-  # for gradle output style
+before_install:
+# for gradle output style
 #  - chmod +x gradlew
 #  - export TERM=dumb
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-  - android update sdk --no-ui --filter build-tools-23.0.2,android-23
-  - sudo ls -ltr /usr/local/android-sdk
-  - whoami
-  - sudo cp -R /usr/local/android-sdk-25.2.3 ${ANDROID_HOME}
-  - sudo ls -ltr ${ANDROID_HOME}
-  - sudo mkdir ${ANDROID_HOME}/licenses
+#  - android update sdk --no-ui --filter build-tools-23.0.2,android-23
+#  - sudo cp -R /usr/local/android-sdk-25.2.3 ${ANDROID_HOME}
+#  - sudo ls -ltr ${ANDROID_HOME}
   - sudo touch ${ANDROID_HOME}/licenses/android-sdk-license
   - sudo chown travis:travis -R ${ANDROID_HOME}
-  - sudo echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > ${ANDROID_HOME}/licenses/android-sdk-license
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+  - chmod +x gradlew
+  - ./gradlew dependencies || true
 
 # Let's try to build...
-script: TERM=dumb ./gradlew clean build
+script: 
+  - "./gradlew clean build"
