--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+  - $ANDROID_HOME/tools/bin/sdkmanager --licenses
   - chmod +x gradlew
   - ./gradlew dependencies || true
 
