--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:preference-v7:26.1.0'
-    compile 'com.android.support:customtabs:26.1.0'
-    compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.github.paolorotolo:appintro:4.1.0'
-    compile 'com.thebluealliance:spectrum:0.7.1'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'org.jsoup:jsoup:1.9.2'
+    implementation 'com.github.paolorotolo:appintro:4.1.0'
+    implementation 'com.thebluealliance:spectrum:0.7.1'
 }
