--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
         debug {
             applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
         }
     }
 }
