--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,8 @@ android {
 
 dependencies {
     // Required -- JUnit 4 framework
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.7.22'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.7.22'
 
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
