TASK: Make sure travis executes the tests and generates coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,6 @@ before_install:
   - ./gradlew dependencies || true
 
 # Let's try to build...
-script: 
-  - ./gradlew clean build
+script:
+  - ./gradlew test jacocoTestReport && ./gradlew coveralls bintrayUpload
+  #- ./gradlew clean build
