--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,6 @@ before_install:
 
 # Let's try to build...
 script:
-  - ./gradlew test && ./gradlew coveralls bintrayUpload
+  - ./gradlew testdebugUnitTestCoverage coveralls
+  #- ./gradlew test && ./gradlew coveralls bintrayUpload
   #- ./gradlew clean build
