--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.kt3k.coveralls'
+apply from: '../jacoco.gradle'
 
 android {
     compileSdkVersion 26
@@ -31,6 +33,7 @@ android {
         debug {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
+            testCoverageEnabled = true
         }
     }
 
@@ -40,10 +43,11 @@ android {
 }
 
 dependencies {
-    // Required -- JUnit 4 framework
+    // Required -- JUnit 4 framework (Unit tests)
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.7.22'
 
+    // Support libraries
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -51,7 +55,17 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:preference-v7:26.1.0'
     implementation 'com.android.support:customtabs:26.1.0'
+
+    // Other libraries
     implementation 'org.jsoup:jsoup:1.10.2'
     implementation 'com.github.paolorotolo:appintro:4.1.0'
     implementation 'com.thebluealliance:spectrum:0.7.1'
+}
+
+coveralls {
+    jacocoReportPath = "${buildDir}/reports/jacoco/testdebugUnitTestCoverage/coverage.xml"
+}
+tasks.coveralls {
+    dependsOn 'testDebugUnitTestCoverage'
+    onlyIf { System.env.'CI' }
 }
