FIX: Try to fix the travis build...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
 
     compileOptions.encoding = "utf-8"
 
+    signingConfigs {
+        release
+    }
 
     buildTypes {
         release {
