--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:preference-v7:26.1.0'
     implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'com.android.support:support-compat:26.1.0'
 
     // Other libraries
     implementation 'org.jsoup:jsoup:1.10.2'
