--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,8 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
