--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,15 +71,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha01'
+    implementation 'androidx.preference:preference:1.1.0-alpha02'
     implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.core:core:1.1.0-alpha02'
+    implementation 'androidx.core:core:1.1.0-alpha03'
 
-    //implementation "androidx.work:work-runtime:1.0.0-alpha09"
-    implementation "android.arch.work:work-runtime:1.0.0-alpha12"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha13"
 
     // Other libraries
     implementation 'org.jsoup:jsoup:1.10.2'
+    //noinspection GradleDependency
     implementation 'com.github.paolorotolo:appintro:v5.1.0'
     implementation 'com.thebluealliance:spectrum:0.7.1'
 }
