--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@drawable/ic_launcher"
+        android:name=".AppContext"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme.Light">
