--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
 
 script:
   - ./gradlew jacocoTestReport coveralls
-  - ./gradlew clean build
+  - ./gradlew clean assembleRelease
 
 deploy:
   provider: releases
