--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,12 @@ android:
     - 'intel-android-extra-license-.+'
     - '.*'
 
+addons:
+  apt:
+    packages:
+      - language-pack-en
+      - language-pack-de
+
 notifications:
   email: false
 
