--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,11 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_6ab911f61ce6_key -iv $encrypted_6ab911f61ce6_iv -in keystore.ks.enc -out keystore.ks -d
+  - 'if [ -n "$TRAVIS_TAG" ]; then openssl aes-256-cbc -K $encrypted_6ab911f61ce6_key -iv $encrypted_6ab911f61ce6_iv -in keystore.ks.enc -out keystore.ks -d; else echo "Not building a tagged commit! Skipping decrypting!"; fi'
 
 script:
   - ./gradlew jacocoTestReport coveralls
-  - ./gradlew clean assembleRelease
+  - 'if [ -n "$TRAVIS_TAG" ]; then ./gradlew clean assembleRelease; else echo "Not building a tagged commit! Skipping building release apk!"; fi'
 
 deploy:
   provider: releases
