--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
     - ANDROID_API=28
     - EMULATOR_API=28
     - ANDROID_BUILD_TOOLS=28.0.3
- 
+    - LC_ALL='de_DE.UTF-8'
+
 android:
   components:
     - tools
@@ -20,6 +21,11 @@ android:
     - 'google-gdk-license-.+'
     - 'intel-android-extra-license-.+'
     - '.*'
+
+addons:
+  apt:
+    packages:
+      - language-pack-de
 
 notifications:
   email: false
@@ -34,11 +40,11 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_6ab911f61ce6_key -iv $encrypted_6ab911f61ce6_iv -in keystore.ks.enc -out keystore.ks -d
+  - 'if [ -n "$TRAVIS_TAG" ]; then openssl aes-256-cbc -K $encrypted_6ab911f61ce6_key -iv $encrypted_6ab911f61ce6_iv -in keystore.ks.enc -out keystore.ks -d; else echo "Not building a tagged commit! Skipping decrypting!"; fi'
 
 script:
   - ./gradlew jacocoTestReport coveralls
-  - ./gradlew clean build
+  - 'if [ -n "$TRAVIS_TAG" ]; then ./gradlew clean assembleRelease; else echo "Not building a tagged commit! Skipping building release apk!"; fi'
 
 deploy:
   provider: releases
