--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'jacoco'
-    id 'com.github.kt3k.coveralls'
+    id 'com.github.kt3k.coveralls' version '2.12.0'
 }
 
 jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = "0.8.7"
 }
 
 tasks.withType(Test) {
