--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
+  - yes | sdkmanager --licenses
   - 'if [ -n "$TRAVIS_TAG" ]; then openssl aes-256-cbc -K $encrypted_6ab911f61ce6_key -iv $encrypted_6ab911f61ce6_iv -in keystore.ks.enc -out keystore.ks -d; else echo "Not building a tagged commit! Skipping decrypting!"; fi'
 
 script:
