build: update locale to German
This is to fix an issue with date strings being formatted in English but Tests were designed for a German system = German date names.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,17 @@ on:
   pull_request:
     branches: [ master ]
 
-# Where will they run
+env:
+  LANG: "de_DE.UTF-8"
+
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    - name: Set up Locale - de_DE.UTF-8
+      run: |
+        sudo locale-gen de_DE.UTF-8
+        sudo update-locale LANG=de_DE.UTF-8
 
     steps:
       - name: Checkout
