build: fix typo in deploy action
-.-

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ steps.sign_app.outputs.signedReleaseFile }}
-          tag: ${{ githitub.ref }}
+          tag: ${{ github.ref }}
 
       - name: Upload bundle to release
         uses: svenstaro/upload-release-action@v2
